--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-notes": "^5.0.11",
+    "@storybook/addon-storysource": "^5.0.11",
+    "markdown-it": "^8.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0"
